Fixed food entry overflow issue

--- a/PhotoMenu/static/PhotoMenu/CSS/Snippets/FoodEntry.css
+++ b/PhotoMenu/static/PhotoMenu/CSS/Snippets/FoodEntry.css
@@ -23,9 +23,9 @@ div.food-entry-wrapper{
 }
 h4.food-entry-name{
     font-size: 13px;
-    overflow: hidden;
+    line-height: 15px;
     text-align: left;
-    margin: 3% 0px 3% 4%;
+    margin: 2% 0px 2% 4%;
     font-weight: bold;
     width: 92%;
     color: rgb(53,53,53);
@@ -51,8 +51,10 @@ li.unloaded-image img{
 p.food-entry-price{
     width: 92%;
     font-size: 13px;
+    line-height: 15px;
     color: #FF9800;
-    margin: 3px 0px 4% 4%;
+    margin-bottom: 3%;
+    margin-left: 4%;
     font-weight: bold;
 }
 
@@ -63,9 +65,12 @@ p.food-entry-price{
     }
     h4.food-entry-name{
         font-size: 16px;
+        line-height: 20px;
+        margin-bottom: 1%;
     }
     p.food-entry-price{
         font-size: 16px;
+        line-height: 20px;
     }
 
 }
@@ -90,10 +95,11 @@ p.food-entry-price{
     p.food-description-name{
         display: block;
         font-size: 16px;
-        overflow: hidden;
-        margin: 0px 0px 7px 4%;
+        line-height: 18px;
+        margin-bottom: 3px;
+        margin-left: 4%;
         color: rgb(120,120,120);
         width: 92%;
-        line-height: 16px;
     }
+
 }
